# ChangeLog for www-servers/ocsigen
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigen/ChangeLog,v 1.29 2009/11/25 17:24:47 aballier Exp $

*ocsigen-1.2.2 (25 Nov 2009)

  25 Nov 2009; Alexis Ballier <aballier@gentoo.org> -ocsigen-1.2.1.ebuild,
  +ocsigen-1.2.2.ebuild:
  version bump

  16 Oct 2009; Alexis Ballier <aballier@gentoo.org> -ocsigen-1.2.0.ebuild,
  -files/ocsigen-1.2.0-pcre-ocaml-6.0.0.patch:
  remove old

*ocsigen-1.2.1 (13 Oct 2009)

  13 Oct 2009; Alexis Ballier <aballier@gentoo.org> +ocsigen-1.2.1.ebuild:
  version bump

  28 Sep 2009; Alexis Ballier <aballier@gentoo.org> -ocsigen-1.1.0.ebuild:
  remove old

*ocsigen-1.2.0 (19 Sep 2009)

  19 Sep 2009; Alexis Ballier <aballier@gentoo.org> +ocsigen-1.2.0.ebuild,
  +files/ocsigen-1.2.0-pcre-ocaml-6.0.0.patch:
  Version bump with a patch grabbed from debian to build against latest
  pcre-ocaml

  25 Sep 2008; Alexis Ballier <aballier@gentoo.org> ocsigen-1.1.0.ebuild:
  keyword ~x86-fbsd

  25 Sep 2008; Alexis Ballier <aballier@gentoo.org> files/ocsigen.initd:
  remove bashisms from init script

  08 Sep 2008; Alexis Ballier <aballier@gentoo.org> -ocsigen-1.0.0.ebuild:
  remove old

*ocsigen-1.1.0 (02 Sep 2008)

  02 Sep 2008; Alexis Ballier <aballier@gentoo.org> +ocsigen-1.1.0.ebuild:
  Version bump, thanks Pierre.

  22 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> -ocsigen-0.99.5.ebuild:
  remove old

*ocsigen-1.0.0 (10 Apr 2008)

  10 Apr 2008; Alexis Ballier <aballier@gentoo.org> +ocsigen-1.0.0.ebuild:
  version bump, thanks Pierre

  01 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  -files/ocsigen-0.99.3-lwt-gentoo.patch, -ocsigen-0.99.4.ebuild:
  remove old

*ocsigen-0.99.5 (18 Jan 2008)

  18 Jan 2008; Alexis Ballier <aballier@gentoo.org> +ocsigen-0.99.5.ebuild:
  version bump, thanks Pierre
