@@ -4,13 +4,15 @@ Hash: SHA1
 AUX ocsigen.confd 335 RMD160 7196593f5d8ec7b40488771bdf0f60a904eca476 SHA1 e896da5ae6ef2da8f6a375bddbc2dad4c0c26fa8 SHA256 19be530156391d674a4db516303ff614e897a38e50bbff065ddcbf897d0feb8d
 AUX ocsigen.initd 870 RMD160 c259ad550e2c521c31afe772d6b1bc0c217d8827 SHA1 a294deab42e24e098a96158249ad0cd90d086cd3 SHA256 846ac84dfd83adbaaba67c7d3c59878aea5ebeac96d436521df9a012e46d00c9
 DIST ocsigen-1.2.2.tar.gz 687604 RMD160 23d9a441e25461e016d78b17e25dea64c1cf88a5 SHA1 717f949f07970610ad32a5eb55b49bda9aa35600 SHA256 02d860da65fbe2f020ee6a3946920542fa1873dc47228ecb33945f80c68bd06e
+DIST ocsigen-1.3.4.tar.gz 783270 RMD160 47bc55ee41f66ffa6bd2e5127b735a2ac0ea0893 SHA1 5084b3c596c65a011a56ddbc6026674604d08aac SHA256 89939ef965541824de88a9002ac1924e3067c9e16331cfadfed731f6822c9fa2
 EBUILD ocsigen-1.2.2.ebuild 2601 RMD160 d46fe4f3a7c921e13e8ce554171bf24601530ed4 SHA1 de0e9f7797bee86abaf1b0b2b79399b6efa32e39 SHA256 0b5e586b6e2a7e634cb68b33faa1135f5cc52e8607708c46c88f9baece97f50f
-MISC ChangeLog 3944 RMD160 a00326eb7500689d609604f77a5e9d0e63fca897 SHA1 1ef0a04a6d3b69d07ce7704d84a0e2cb035110e5 SHA256 2e03ede60a6df9c0dc647901be74cc5557af4128cead74953d507c542a06a59a
+EBUILD ocsigen-1.3.4.ebuild 2604 RMD160 24753212c567b7e7201d0e7bc3411c1a907146ca SHA1 da4342e67a9dd352826446dd123d9f838c0cb709 SHA256 743c3ed7ca4aa1be73141dad8952d28b33176217c3126e31c5e1d83ed5e9e1a8
+MISC ChangeLog 4065 RMD160 f062e3da8de6d93ac891866a224a1044879746e9 SHA1 dc02db807360ef67bbfe4c754451327875579855 SHA256 7783be87f492c2b5040e0e5b0a0e695393d3ef04cb0416ffbe9fc848da90b51c
 MISC metadata.xml 954 RMD160 31edbdaf8fcc1fbb7f58b559717def731c5af262 SHA1 535650460fb02456232fec59358b3b9cb8b332d1 SHA256 c1f72e4998ecfe6fde39e1774aeebaa768ffca641bb93ceadf66edc0602838c7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAksNaGUACgkQvFcC4BYPU0ob5gCfdzUxqPyWJf0z6XI942zLZa/j
-96YAn104NnKIS+fTJQ5sI3Jtlmf7eR1i
-=vpD5
+iEYEARECAAYFAk04y3IACgkQvFcC4BYPU0qMRQCaAljryHMLsYyDYkp55lkONJgt
+7eIAnRESEtQ5HTD4WJZQhxjGFURSmHU+
+=BUOA
 -----END PGP SIGNATURE-----
