@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/ocsigen
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigen/ChangeLog,v 1.29 2009/11/25 17:24:47 aballier Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigen/ChangeLog,v 1.30 2011/01/20 23:55:24 aballier Exp $
+
+*ocsigen-1.3.4 (20 Jan 2011)
+
+  20 Jan 2011; Alexis Ballier <aballier@gentoo.org> +ocsigen-1.3.4.ebuild:
+  version bump
 
 *ocsigen-1.2.2 (25 Nov 2009)
 
